@@ -2,6 +2,8 @@ Revision history for HTML-FromANSI-Tiny
 
 {{$NEXT}}
 
+  - Add 'attr_to_class' method to allow subclasses to customize class names.
+
 0.105     2017-09-06T14:44:55Z
 
   - Update meta files.  No code changes.
